--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,43 @@
 /*  your css code here. If applicable */
+ /* your css code here. If applicable
+body{
+	background-color:plum;
+}
+#buttons {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-wrap: wrap;
+		}
+
+		.btn {
+			display: inline-block;
+			padding: 10px;
+			margin: 10px;
+			background-color: #3f51b5;
+			color: #fff;
+			border: none;
+			border-radius: 5px;
+			cursor: pointer;
+		}
+
+		.stop {
+			background-color: #f44336;
+		} */
+		body{
+		background: purple;
+		}		
+		#buttons{
+			width: 100%;
+			height: 150px;
+			/* background-color: purple; */
+			
+		}
+		
+		#bt-n{
+			font-size: 15.6px;
+			margin-top: 50px;
+			padding: 15px;
+			margin-left: 30px ;
+		}
+		
